--- a/semana1/devops-practice/docker-compose.yml
+++ b/semana1/devops-practice/docker-compose.yml
@@ -8,3 +8,13 @@ services:
     environment:
       - NODE_ENV=production
     container_name: devops-practice-container 
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3001:3001"
