--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
         run: |
           docker compose up --build -d  # Cambiar docker-compose a docker compose
         working-directory: semana1/devops-practice
+        
+      - name: Run security audit
+      	run: npm audit
 
       - name: Run tests
         run: docker exec devops-practice-container npm test
