--- a/.github/workflows/tarea1.yml
+++ b/.github/workflows/tarea1.yml
@@ -1,17 +1,24 @@
-name: Python CI
 on:
-    push:
-      branches:
-        - develop
-        - main
-    jobs:
-      build:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@v2
-        - name: Set up Python
-          uses: actions/setup-python@v2
-          with:
-            python-version: '3.9'
-        - run: pip install -r requirements.txt
-        - run: pytest
+  push:
+    branches:
+      - develop
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+        working-directory: Tarea1-CC3S2
+
+      - name: Run tests
+        run: pytest
+        working-directory: Tarea1-CC3S2
