--- a/proyecto_pc5/site.yml
+++ b/proyecto_pc5/site.yml
@@ -7,3 +7,9 @@
   tasks:
     - import_tasks: ansible/ejercicio1/main.yml
     - import_tasks: ansible/ejercicio2/main.yml
+  vars:
+    server_name: localhost
+    ssl_certificate_path: /etc/nginx/ssl/certificate.pem
+    ssl_certificate_key_path: /etc/nginx/ssl/certificate.key
+  handlers:
+    - import_tasks: handlers/main.yml
