--- a/proyecto_pc5/site.yml
+++ b/proyecto_pc5/site.yml
@@ -7,9 +7,16 @@
   tasks:
     - import_tasks: ansible/ejercicio1/main.yml
     - import_tasks: ansible/ejercicio2/main.yml
+    - import_tasks: ansible/ejercicio3/main.yml
   vars:
+    # variables del ejercicio 1 y 2
     server_name: localhost
     ssl_certificate_path: /etc/nginx/ssl/certificate.pem
     ssl_certificate_key_path: /etc/nginx/ssl/certificate.key
+    # variables del ejercicio 3
+    app_dir: /var/www/flask_app
+    nginx_config_path: /etc/nginx/sites-available/flask_app
+    ports: [8000, 8001, 8002]
+    gunicorn_path: /usr/local/bin/gunicorn
   handlers:
     - import_tasks: handlers/main.yml
