--- a/proyecto_pc5/handlers/main.yml
+++ b/proyecto_pc5/handlers/main.yml
@@ -7,3 +7,9 @@
 - name: Recargar systemd
   command: systemctl daemon-reload
   become: yes
+
+- name: Reiniciar Prometheus
+  become: true
+  systemd:
+    name: prometheus
+    state: restarted
