Ejercicio 8 dockerfile added

--- a/proyecto_pc5/site.yml
+++ b/proyecto_pc5/site.yml
@@ -10,7 +10,8 @@
     - import_tasks: ansible/ejercicio3/main.yml
     - import_tasks: ansible/ejercicio4/main.yml
     #- import_tasks: ansible/ejercicio5/main.yml
-    
+    #- import_tasks: ansible/ejercicio8/main.yml
+
   vars:
     # variables del ejercicio 1 y 2
     server_name: localhost
